add handler for Delete member
