# src/docs/swagger.yaml
@@ -524,6 +524,40 @@ paths:
       summary: Change member role
       tags:
       - ChatMembers
+  /messenger/chat/{chat_id}/members/{member_username}/delete:
+    delete:
+      consumes:
+      - application/json
+      description: Remove the member from the chat
+      parameters:
+      - description: chat from which you want to delete a member
+        in: path
+        name: chat_id
+        required: true
+        type: integer
+      - description: target member username
+        in: path
+        name: member_username
+        required: true
+        type: string
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/dto.MessageResponse'
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/dto.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/dto.ErrorResponse'
+      summary: Delete member
+      tags:
+      - ChatMembers
   /messenger/chat/all:
     get:
       consumes:
