# src/settings/server/server.go
@@ -89,6 +89,7 @@ func RunServer() {
 			chat.PATCH("/edit/:chat_id", handler_api.ChangeChat)
 
 			chat.PATCH("/:chat_id/members/:member_username/change-role", handler_api.ChangeMemberRole)
+			chat.DELETE("/:chat_id/members/:member_username/delete", handler_api.DeleteMember)
 		}
 	}
 
